--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "description": "",
   "scripts": {
+    "prebuild": "mkdir -p dist && cp -r photos dist/",
     "build": "parcel build index.html",
     "dev": "parcel index.html --open",
     "start": "npm run build && npm run dev"
