--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "build": "next build",
     "start": "next start"
   },
+  "engines": {
+    "node": "^15.3.0",
+    "npm": "^7.0.0"
+  },
   "dependencies": {
     "classnames": "^2.2.6",
+    "gray-matter": "^4.0.2",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/node": "^14.14.11",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
@@ -74,6 +82,18 @@
           "parser": "html"
         }
       }
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
