--- a/package.json
+++ b/package.json
@@ -12,13 +12,28 @@
     "npm": "^7.0.0"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.5.0",
+    "@tailwindcss/typography": "^0.3.1",
+    "autoprefixer": "^10.1.0",
     "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
     "next": "10.0.3",
+    "postcss": "^8.2.1",
+    "prism-themes": "^1.5.0",
+    "prismjs": "^1.22.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "rehype": "^11.0.0",
+    "rehype-stringify": "^8.0.0",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-html": "^13.0.1",
+    "remark-parse": "^9.0.0",
+    "remark-prism": "^1.3.3",
+    "remark-react": "^8.0.0",
+    "remark-rehype": "^8.0.0",
+    "tailwindcss": "^2.0.2",
+    "unified": "^9.2.0",
+    "unified-stream": "^1.0.6"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
