--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prism-themes": "^1.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "remark-prism": "^1.3.3",
