Docker setup & mobile optimisations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,9 @@
   "tailwindCSS.colorDecorators": "off",
   "cSpell.words": [
     "Linkedin",
+    "badsyntax",
+    "richardwillis",
+    "tailwindcss",
     "vfile"
   ]
 }
