--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "resize-photos": "./scripts/resize-images.sh public/photos/*.jpg"
   },
   "engines": {
-    "node": "^15.3.0",
-    "npm": "^7.0.0"
+    "node": "^14.15.3",
+    "npm": "^6.14.9"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.3.1",
     "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
-    "next": "10.0.3",
+    "next": "10.0.4",
     "prism-themes": "^1.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -28,17 +28,19 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
-    "@types/node": "^14.14.11",
+    "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "autoprefixer": "^10.1.0",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^8.2.1",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   },
   "eslintConfig": {
     "ignorePatterns": [
