Add github actions, fix linting and update blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,8 +26,10 @@
   "cSpell.language": "en-GB",
   "tailwindCSS.colorDecorators": "off",
   "cSpell.words": [
+    "DOKKU",
     "Linkedin",
     "badsyntax",
+    "ghcr",
     "richardwillis",
     "tailwindcss",
     "vfile"
