--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -19,6 +19,4 @@ jobs:
       - name: Install NPM Packages
         run: npm ci
       - name: Lint
-        run: |
-          npm run lint
-          npm run build
+        run: npm run lint
