--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Sync static assets to S3
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --cache-control public,max-age=31536000,immutable
+          args: --cache-control public,max-age=31536000,immutable --size-only
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -71,7 +71,7 @@ jobs:
     needs: [publish-docker, publish-s3]
     runs-on: ubuntu-20.04
     steps:
-      - name: Setup SSH
+      - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.DOKKU_SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa
