--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "npm": "^6.14.9"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.5.0",
     "@tailwindcss/typography": "^0.3.1",
     "classnames": "^2.2.6",
     "gray-matter": "^4.0.2",
@@ -26,10 +27,15 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
-    "remark": "^13.0.0",
-    "remark-html": "^13.0.1",
-    "remark-prism": "^1.3.3",
-    "tailwindcss": "^2.0.2"
+    "rehype-autolink-headings": "^5.0.1",
+    "rehype-raw": "^5.0.0",
+    "rehype-slug": "^4.0.1",
+    "rehype-stringify": "^8.0.0",
+    "remark-external-links": "^8.0.0",
+    "remark-parse": "^9.0.0",
+    "remark-rehype": "^8.0.0",
+    "tailwindcss": "^2.0.2",
+    "unified": "^9.2.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
