Add initial working prometheus integration

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "npm run build:server && npm start",
+    "build:server": "tsc --project tsconfig.server.json",
+    "build": "npm run build:server && next build",
+    "start": "node server",
     "lint": "npm run lint:prettier && npm run lint:eslint",
     "lint:fix": "npm run lint:fix:prettier && npm run lint:eslint -- --fix",
     "lint:prettier": "prettier --check \"**/*.{js,json,svg,md,yml}\"",
@@ -19,11 +20,15 @@
   "dependencies": {
     "@mapbox/rehype-prism": "^0.5.0",
     "@tailwindcss/typography": "^0.3.1",
+    "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
+    "express": "^4.17.1",
+    "express-prom-bundle": "^6.3.1",
     "gray-matter": "^4.0.2",
     "next": "10.0.4",
     "pm2": "^4.5.1",
     "prism-themes": "^1.5.0",
+    "prom-client": "^13.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
@@ -39,6 +44,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
