More info & changes on monitoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,11 +33,15 @@
     "badsyntax",
     "browserslist",
     "ghcr",
+    "grafana",
+    "letsencrypt",
     "mapbox",
+    "mkdir",
     "rehype",
     "richardwillis",
     "srcset",
     "tailwindcss",
+    "tsdb",
     "ttfb",
     "vfile",
     "webp"
