--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,8 +6,27 @@ scrape_configs:
     scrape_interval: 15s
     static_configs:
       - targets: ['localhost:9090']
+  - job_name: node-exporter
+    scrape_interval: 15s
+    scheme: https
+    basic_auth:
+      username: <supersecret>
+      password: <supersecret>
+    static_configs:
+      - targets:
+          - 'node-exporter.dokku.proxima-web.com'
+  - job_name: cadvisor
+    scrape_interval: 15s
+    scheme: https
+    basic_auth:
+      username: <supersecret>
+      password: <supersecret>
+    static_configs:
+      - targets:
+          - 'cadvisor.dokku.proxima-web.com'
   - job_name: 'richardwillis-nodejs'
     scrape_interval: 30s
     metrics_path: '/metrics'
     static_configs:
-      - targets: ['richardwillis:3000']
+      - targets:
+          - 'richardwillis.web:3000'
