--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "npm run build:server && npm start",
-    "build:server": "tsc --project tsconfig.server.json",
+    "build:server": "tsc -p src/server",
     "build": "npm run build:server && next build",
     "start": "node server",
     "lint": "npm run lint:prettier && npm run lint:eslint",
@@ -41,6 +41,7 @@
     "unified": "^9.2.0"
   },
   "devDependencies": {
+    "@tsconfig/node14": "^1.0.0",
     "@types/classnames": "^2.2.11",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.14",
