--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2017",
     "isolatedModules": false,
     "noEmit": false
   },
-  "include": ["./server/**/*.ts"]
+  "include": ["**/*.ts"]
 }
