--- a/staticman.yml
+++ b/staticman.yml
@@ -3,9 +3,9 @@
 # For example, you can have one property to handle comment submission and
 # another one to handle posts.
 comments:
-  allowedFields: ['author', 'slug', 'message']
+  allowedFields: ['name', 'slug', 'message']
 
-  # (*) REQUIRED
+  # (*) REQUIREDrequiredFields
   #
   # Name of the branch being used. Must match the one sent in the URL of the
   # request.
@@ -64,7 +64,7 @@ comments:
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  requiredFields: ['name', 'message']
+  requiredFields: ['name', 'slug', 'message']
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
