--- a/staticman.yml
+++ b/staticman.yml
@@ -16,7 +16,7 @@ comments:
   # (*) REQUIRED
   #
   # Destination path (filename) for the data files. Accepts placeholders.
-  filename: 'entry{@timestamp}'
+  filename: '{fields.slug}/entry{@timestamp}'
 
   # The format of the generated data files. Accepted values are "json", "yaml"
   # or "frontmatter"
