--- a/staticman.yml
+++ b/staticman.yml
@@ -65,6 +65,9 @@ comments:
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
   requiredFields: ['name', 'slug', 'message']
+  
+  pullRequestBody: "A new comment has been added. :tada:\n\nMerge the pull request to accept it, or close it to send it away.\n\n---\n"
+
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
