--- a/staticman.yml
+++ b/staticman.yml
@@ -16,7 +16,7 @@ comments:
   # (*) REQUIRED
   #
   # Destination path (filename) for the data files. Accepts placeholders.
-  filename: 'entry{@timestamp}'
+  filename: '{fields.slug}/entry{@timestamp}'
 
   # The format of the generated data files. Accepted values are "json", "yaml"
   # or "frontmatter"
@@ -65,6 +65,8 @@ comments:
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
   requiredFields: ['name', 'slug', 'message']
+
+  pullRequestBody: "A new comment has been added. :tada:\n\nMerge the pull request to accept it, or close it to send it away.\n\n---\n"
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
