Fix ui issues and record more client metric

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
   "tailwindCSS.colorDecorators": "off",
   "cSpell.words": [
     "Buildx",
+    "Contentful",
     "DOKKU",
     "LOGLEVEL",
     "Linkedin",
