--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gray-matter": "^4.0.2",
     "js-yaml": "^3.14.1",
     "next": "10.0.4",
+    "nprogress": "^0.2.0",
     "prism-themes": "^1.5.0",
     "prom-client": "^13.0.0",
     "react": "17.0.1",
@@ -46,6 +47,7 @@
     "@types/classnames": "^2.2.11",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.14",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
@@ -56,6 +58,7 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.2.1",
+    "postcss-nested": "^5.0.3",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   },
