--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.2.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-nested": "^5.0.3",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   },
