Fix tailwind css

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,8 @@
     "WORKDIR",
     "badsyntax",
     "browserslist",
+    "flexbox",
+    "flexbugs",
     "ghcr",
     "grafana",
     "letsencrypt",
