--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "npm run build:server && npm start",
-    "build:server": "tsc -p src/server --outDir build",
+    "build:server": "tsc -p src/server --outDir build/server",
     "build": "npm run build:server && next build",
     "start": "node build/server",
     "lint": "npm run lint:prettier && npm run lint:eslint",
@@ -24,7 +24,7 @@
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "gray-matter": "^4.0.2",
-    "js-yaml": "^3.14.1",
+    "js-yaml": "^4.0.0",
     "next": "10.0.4",
     "nprogress": "^0.2.0",
     "prism-themes": "^1.5.0",
@@ -46,20 +46,19 @@
     "@tsconfig/node14": "^1.0.0",
     "@types/classnames": "^2.2.11",
     "@types/express": "^4.17.9",
-    "@types/node": "^14.14.14",
+    "@types/node": "^14.14.19",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "autoprefixer": "^10.1.0",
-    "eslint": "^7.16.0",
+    "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "postcss": "^8.2.1",
+    "postcss": "^8.2.2",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-nested": "^5.0.3",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
