--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@tsconfig/node14": "^1.0.0",
     "@types/classnames": "^2.2.11",
     "@types/express": "^4.17.9",
+    "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.14.19",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.0",
