Add project server route and add icon to projects list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,10 +31,12 @@
     "DOKKU",
     "LOGLEVEL",
     "Linkedin",
+    "Octokit",
     "QEMU",
     "WORKDIR",
     "badsyntax",
     "browserslist",
+    "checkperiod",
     "flexbox",
     "flexbugs",
     "ghcr",
