--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.5.0",
+    "@octokit/rest": "^18.0.12",
     "@tailwindcss/typography": "^0.3.1",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
@@ -26,6 +27,7 @@
     "gray-matter": "^4.0.2",
     "js-yaml": "^4.0.0",
     "next": "10.0.4",
+    "node-cache": "^5.1.2",
     "nprogress": "^0.2.0",
     "prism-themes": "^1.5.0",
     "prom-client": "^13.0.0",
