--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -7,9 +7,9 @@ on:
     branches: [master]
 
 jobs:
-  lint:
+  lint-app:
     runs-on: ubuntu-20.04
-    name: Lint
+    name: Lint app
     steps:
       - uses: actions/checkout@v1
       - name: Set up Node.js
@@ -20,3 +20,15 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run lint
+
+  lint-dockerfile:
+    runs-on: ubuntu-20.04
+    name: Lint dockerfile
+    steps:
+      - uses: actions/checkout@v1
+      - uses: brpaz/hadolint-action@v1.2.1
+        with:
+          dockerfile: Dockerfile
+      - uses: brpaz/hadolint-action@v1.2.1
+        with:
+          dockerfile: staticman/Dockerfile
