--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "js-yaml": "^4.0.0",
     "next": "10.0.4",
     "node-cache": "^5.1.2",
+    "node-cron": "^2.0.3",
     "nprogress": "^0.2.0",
     "prism-themes": "^1.5.0",
     "prom-client": "^13.0.0",
@@ -50,6 +51,7 @@
     "@types/express": "^4.17.9",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.14.19",
+    "@types/node-cron": "^2.0.3",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
