--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -88,6 +88,7 @@ jobs:
           environment: production
           required_contexts: '[]'
           production_environment: true
+          auto_merge: false
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
       - name: Set GitHub deployment status to in progress
