Add docs on setting up loki

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
     "LOGLEVEL",
     "Linkedin",
     "Octokit",
+    "Promtail",
     "QEMU",
     "WORKDIR",
     "badsyntax",
@@ -48,6 +49,7 @@
     "mapbox",
     "mkdir",
     "nocheck",
+    "nogroup",
     "nprogress",
     "opencontainers",
     "rehype",
