--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
 version: '3'
+
+networks:
+  loki:
+
 services:
   richardwillis:
     container_name: 'richardwillis'
     build: ./
     ports:
       - 3000:3000
+
   prometheus:
     container_name: 'prometheus'
     image: prom/prometheus
@@ -14,11 +19,31 @@ services:
       - --config.file=/etc/prometheus/prometheus.yml
     ports:
       - 9090:9090
+
   grafana:
     container_name: 'grafana'
     image: grafana/grafana:latest
     ports:
       - 3001:3000
+    networks:
+      - loki
+
+  loki:
+    image: grafana/loki:latest
+    ports:
+      - '3100:3100'
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - loki
+
+  promtail:
+    image: grafana/promtail:latest
+    volumes:
+      - /var/log:/var/log
+    command: -config.file=/etc/promtail/config.yml
+    networks:
+      - loki
+
   staticman:
     container_name: 'staticman'
     build: ./staticman/
